--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "illuminate/support": "5.*|^6.0|^7.0"
     },
     "require-dev": {
+        "aws/aws-sdk-php": "^3.0",
         "orchestra/testbench": "^3.5.0|^3.6.0|^4.0|^5.0",
         "phpunit/phpunit": "^5.0|^6.0|^8.0"
     },
