--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,6 +22,23 @@ jobs:
               testbench: 5.*
             - laravel: 6.*
               testbench: 4.*
+          exclude:
+            - laravel: 6.*
+              php: 8.0
+            - laravel: 6.*
+              php: 8.1
+            - laravel: 7.*
+              php: 8.0
+            - laravel: 7.*
+              php: 8.1
+            - laravel: 9.*
+              php: 7.3
+            - laravel: 9.*
+              php: 7.4
+            - laravel: 8.*
+              php: 7.4
+            - laravel: 8.*
+              php: 7.3
 
     name: P ${{ matrix.php }} - L ${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
