--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
           php: [7.3, 7.4, 8.0, 8.1]
           laravel: [6.*, 7.*, 8.*, 9.*]
-          dependency-version: [prefer-lowest, prefer-stable]
+          dependency-version: [prefer-stable]
           include:
             - laravel: 9.*
               testbench: 7.*
